--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ h1 {
 button {
     background-color: white;
     width: 70%;
-    box-shadow: 0px 5px 10px -3px #353535;
+    box-shadow: 0 5px 10px -3px #353535;
     font-family: 'Poppins', sans-serif;
     color: #674bb1;
     font-size: 0.90rem;
@@ -95,7 +95,7 @@ button:hover {
     }
 }
 
-@media (min-width: 1100px) {
+@media (min-width: 1100px) and (max-width: 1423px) {
     body {
         background: url("images/bg-desktop.svg") top no-repeat;
         background-color: #674bb1;
@@ -141,4 +141,56 @@ button:hover {
     }
 
 
+}
+
+@media (min-width: 1424px) {
+    body {
+        background: url("images/bg-desktop.svg") top no-repeat;
+        background-color: #674bb1;
+        background-size: 100%;
+        max-width: 1423px;
+    }
+
+    .conteneur {
+        flex-direction: row;
+        max-width: 1390px;
+        width: 100%;
+        align-self: start;
+        padding: 50px 60px;
+        padding-bottom: 0;
+    }
+
+    .main-box {
+        text-align: start;
+        margin: 30px;
+    }
+
+    h1 {
+        font-size: 2.5rem;
+    }
+    .saut {
+        display: block;
+    }
+
+
+    .description {
+        font-size: 1rem;
+    }
+
+    button {
+        margin: 20px 0;
+        width: 210px;
+        font-size: 1.1rem;
+    }
+
+    .reseaux {
+        margin-top: 0;
+        align-self: flex-end;
+        margin-right: 100px;
+    }
+
+    html {
+        display: flex;
+        justify-content: center;
+    }
 }
